@@ -1,3 +1,7 @@
+2023-01-05:
+  - Added support for alternative optimizers to be used in the inner iterations 
+    of MQL/PQL
+
 2022-10-23:
   - Refactored MQL/PQL algorithm: Eliminated redundant code and adapted it to
     both 'nlm' and 'nlminb'
